# odoo17

conf/: odoo.conf
src/odoo17c/: requirements.txt  setup.cfg
src/odoo17c/addons/waaneiza_file_upload/: __manifest__.py
src/odoo17c/addons/waaneiza_file_upload/controllers/: controllers.py
src/odoo17c/addons/waaneiza_file_upload/demo/: demo.xml
src/odoo17c/addons/waaneiza_file_upload/models/: __init__.py  file_upload.py  models.py
src/odoo17c/addons/waaneiza_file_upload/security/: ir.model.access.csv
src/odoo17c/addons/waaneiza_file_upload/views/: file_upload_view.xml  templates.xml  views.xml
