[options]
admin_passwd = admin
db_host = localhost
db_port = 5432
db_user = odoo
db_password = root
addons_path = D:\odoo-17.0\addons
db_name = odoodb


[install]
optimize=1

[flake8]
extend-exclude =
  .git,
  .tx,
  debian,
  doc,
  setup,
extend-select =
  RST
rst-directives =
  function,
  attribute,
  seealso,
  deprecated,
  versionadded,
  versionchanged,
  todo
rst-roles =
  ref,
  mod,
  class,
  py:meth,
  meth,
  attr,
  data,
  const,
  func,
  exc,
  term,
  samp,
  program
